adjusting to original schema (part)
